<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/txtAdicionar"
        android:id="@+id/menuAdicionar"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="ifRoom"/>

    <item android:title="@string/txtDeletar"
        android:id="@+id/menuDeletar"
        android:icon="@android:drawable/ic_menu_delete"/>

    <item android:title="@string/txtEditar"
        android:id="@+id/menuEditar"
        android:icon="@android:drawable/ic_menu_edit"/>

    <item android:title="@string/txtSalvar"
        android:id="@+id/menuSalvar"
        android:icon="@android:drawable/ic_menu_save"/>

    <item android:title="@string/txtAjuda"
        android:id="@+id/menuAjuda"
        android:icon="@android:drawable/ic_menu_help"/>

    <item android:title="@string/txtMais"
        android:icon="@android:drawable/ic_menu_more">
        <menu >
            <item android:title="@string/txtPreferencias"
                android:id="@+id/menuPreferencias"
                android:icon="@android:drawable/ic_menu_preferences"/>

            <item android:title="@string/txtUpload"
                android:id="@+id/menuUpload"
                android:icon="@android:drawable/ic_menu_upload"/>
        </menu>
    </item>
</menu>