<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ListViewSpinnerActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/txtTitulo"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <Spinner
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/spinnerArea"
            android:layout_weight="2"
            ></Spinner>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnSelecionar"
            android:text="@string/txtSelecionar"
            android:layout_weight="2"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txtRotulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/txtRotulo"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/editHabilidade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnAdicionar"
            android:text="@string/txtAdd"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txtObservacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtObservacao"
        android:textColor="#0000FF"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/txtAreaSelecionada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/purple_700"
        android:textSize="18dp"
        android:layout_marginBottom="10dp"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listViewHabilidades">

    </ListView>

</LinearLayout>